--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
-    "sass": "^1.84.0"
+    "react-slick": "^0.30.3",
+    "sass": "^1.84.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
