--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -11,7 +11,7 @@
         "id": 2,
         "imageUrl": "../../img/project4.png",
         "title": "Портфолио",
-        "text": "Одностраничное приложение на React, Scss",
+        "text": "Одностраничное приложение на React",
          "skill":"React",
          "link":""
       },
